small tweaks from VS Live Las Vegas

--- a/DOTNETCORE/ASP.NET Core/2.1/SpyStore_v21/SpyStore_v21/Views/Home/Contact.cshtml
+++ b/DOTNETCORE/ASP.NET Core/2.1/SpyStore_v21/SpyStore_v21/Views/Home/Contact.cshtml
@@ -12,6 +12,7 @@
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
+    <email email-domain="example.com" email-name="support"></email>
+    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br/>
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
