finished authentication section

--- a/DOTNETCORE/Security/Security/Views/Account/Login.cshtml
+++ b/DOTNETCORE/Security/Security/Views/Account/Login.cshtml
@@ -37,6 +37,7 @@
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-default">Log in</button>
+                    <p class="lead">You must validate your email address before you can log into the application.</p>
                 </div>
                 <div class="form-group">
                     <p>
