--- a/DOTNETCORE/Security/Security/Views/Account/Register.cshtml
+++ b/DOTNETCORE/Security/Security/Views/Account/Register.cshtml
@@ -28,6 +28,7 @@
             </div>
             <button type="submit" class="btn btn-default">Register</button>
         </form>
+        <p class="lead">You must validate your email address before you can log into the application.</p>
     </div>
 </div>
 
