--- a/DOTNETCORE/Security/Security/Views/Manage/EnableAuthenticator.cshtml
+++ b/DOTNETCORE/Security/Security/Views/Manage/EnableAuthenticator.cshtml
@@ -49,4 +49,18 @@
 
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
+    <environment include="Development">
+        <script src="~/js/qrcode/qrcode.js" asp-append-version="true"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/js/qrcode/qrcode.min.js" asp-append-version="true"></script>
+    </environment>
+    <script type="text/javascript">
+        new QRCode(document.getElementById("qrCode"),
+            {
+                text: "@Html.Raw(Model.AuthenticatorUri)",
+                width: 150,
+                height: 150
+            });
+    </script>
 }
