--- a/DOTNETCORE/Security/Security/Views/Shared/_Layout.cshtml
+++ b/DOTNETCORE/Security/Security/Views/Shared/_Layout.cshtml
@@ -31,8 +31,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="ApplicationUsers" asp-action="Index">Users</a></li>
+                    <li><a asp-area="" asp-controller="ApplicationRoles" asp-action="Index">Roles</a></li>
+                    <li><a asp-area="" asp-controller="ApplicationUserClaims" asp-action="Index">Claims</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
