Finished basic samples for is4

--- a/DOTNETCORE/Security/IdentityServer/IdentityServerMVCClient/Views/Shared/_Layout.cshtml
+++ b/DOTNETCORE/Security/IdentityServer/IdentityServerMVCClient/Views/Shared/_Layout.cshtml
@@ -33,6 +33,10 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li><a asp-area="" asp-controller="Home" asp-action="Logout">Logout @User.Claims.FirstOrDefault(x=>x.Type=="name")?.Value</a></li>
+                    }
                 </ul>
             </div>
         </div>
