--- a/DOTNETCORE/Security/IdentityServer/IdentityServerMVCClient/Views/Home/About.cshtml
+++ b/DOTNETCORE/Security/IdentityServer/IdentityServerMVCClient/Views/Home/About.cshtml
@@ -1,13 +1,28 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Authentication
+@{
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
+<h3>User claims</h3>
+
+<div>
+    <a asp-action="CallApiUsingUserAccessToken">Call API using user token</a>
+</div>
+<div>
+    <a asp-action="CallApiUsingClientCredentials">Call API using application identity</a>
+</div>
 
 <dl>
     @foreach (var claim in User.Claims)
     {
         <dt>@claim.Type</dt>
         <dd>@claim.Value</dd>
+
     }
+    <dt>access token</dt>
+    <dd>@await ViewContext.HttpContext.GetTokenAsync("access_token")</dd>
+
+    <dt>refresh token</dt>
+    <dd>@await ViewContext.HttpContext.GetTokenAsync("refresh_token")</dd>
 </dl>
