--- a/DOTNETCORE/Security/IdentityServer/IdentityServerWithIdentity/Views/Diagnostics/_ViewImports.cshtml
+++ b/DOTNETCORE/Security/IdentityServer/IdentityServerWithIdentity/Views/Diagnostics/_ViewImports.cshtml
@@ -1,3 +1,4 @@
+@using IdentityServer4.Quickstart.UI
 @using Microsoft.AspNetCore.Identity
 @using IdentityServerWithIdentity
 @using IdentityServerWithIdentity.Models
