Finished Identity with IS and EF examples

--- a/DOTNETCORE/Security/IdentityServer/IdentityServerWithIdentity/Views/Consent/Index.cshtml
+++ b/DOTNETCORE/Security/IdentityServer/IdentityServerWithIdentity/Views/Consent/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using IdentityServer4.Quickstart.UI
-@model IdentityServer4.Quickstart.UI.ConsentViewModel
+﻿@model ConsentViewModel
 
 <div class="page-consent">
     <div class="row page-header">
