--- a/DOTNETCORE/Security/IdentityServer/IdentityServerWithIdentity/Views/Home/Index.cshtml
+++ b/DOTNETCORE/Security/IdentityServer/IdentityServerWithIdentity/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="welcome-page">
+﻿@*http://localhost:5000/.well-known/openid-configuration*@
+<div class="welcome-page">
     <div class="row page-header">
         <div class="col-sm-10">
             <h1>
