--- a/DOTNETCORE/Security/IdentityServer/IdentityServerMVCClient/Views/Home/SecureInfo.cshtml
+++ b/DOTNETCORE/Security/IdentityServer/IdentityServerMVCClient/Views/Home/SecureInfo.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "SecureInfo";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
