--- a/DOTNETCORE/Security/IdentityServer/IdentityServerMVCClient/Views/Shared/_Layout.cshtml
+++ b/DOTNETCORE/Security/IdentityServer/IdentityServerMVCClient/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="SecureInfo">Access Secure Info</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     @if (User.Identity.IsAuthenticated)
                     {
