Corrected the 2.1 examples for RTM

--- a/DOTNETCORE/ASP.NET Core/2.1/SpyStore_v21/SpyStore_v21/Views/Home/About.cshtml
+++ b/DOTNETCORE/ASP.NET Core/2.1/SpyStore_v21/SpyStore_v21/Views/Home/About.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@using Microsoft.Extensions.Options
+@inject IOptionsSnapshot<CustomSettings> CustomSettings
+@{
+    var settings = CustomSettings.Value;
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"]</h2>
