--- a/DOTNETCORE/ASP.NET Core/2.1/SpyStore_HOL.MVC/Views/Shared/AddToCart.cshtml
+++ b/DOTNETCORE/ASP.NET Core/2.1/SpyStore_HOL.MVC/Views/Shared/AddToCart.cshtml
@@ -19,7 +19,8 @@
     }
 }
 @section Scripts {
-    @{
+    <partial Name="_ValidationScriptsPartial"/>
+    @*@{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    }*@
 }
