--- a/DOTNETCORE/ASP.NET Core/2.1/SpyStore_HOL.MVC/Views/Cart/EditorTemplates/CartRecordViewModel.cshtml
+++ b/DOTNETCORE/ASP.NET Core/2.1/SpyStore_HOL.MVC/Views/Cart/EditorTemplates/CartRecordViewModel.cshtml
@@ -2,7 +2,8 @@
 @{
     var formName = "updateCartForm" + Model.Id;
 }
-<form asp-controller="Cart" asp-action="Update" asp-route-customerId="@Model.CustomerId"
+<form asp-controller="Cart" asp-action="Update" 
+      asp-route-customerId="@Model.CustomerId"
       asp-route-id="@Model.Id" id="@formName" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <span asp-validation-for="Quantity" class="text-danger"></span>
