Got nullable strings wrorking

--- a/DOTNETCORE/ASP.NET Core/2.1/SpyStore_HOL.MVC/Views/Shared/_Layout.cshtml
+++ b/DOTNETCORE/ASP.NET Core/2.1/SpyStore_HOL.MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.Extensions.Options
+@using SpyStore_HOL.MVC.Support
+@inject IOptionsSnapshot<CustomSettings> settings
+@{
+    var _settings = settings.Value;
+}
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
