added presentation notes fixed namespaces

--- a/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Cart/EditorTemplates/CartRecordViewModel.cshtml
+++ b/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Cart/EditorTemplates/CartRecordViewModel.cshtml
@@ -1,4 +1,4 @@
-﻿@model CartRecordViewModel
+﻿@model SpyStore.Mvc.Models.ViewModels.CartRecordViewModel
 @{
     var formName = "updateCartForm" + Model.Id;
 }
