--- a/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Cart/Index.cshtml
+++ b/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Cart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model CartViewModel
+﻿@model SpyStore.Mvc.Models.ViewModels.CartViewModel
 @{
     ViewData["Title"] = "Index";
     var cartTotal = 0M;
