--- a/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Cart/Update.cshtml
+++ b/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Cart/Update.cshtml
@@ -1,4 +1,4 @@
-﻿@model CartRecordViewModel
+﻿@model SpyStore.Mvc.Models.ViewModels.CartRecordViewModel
 <tr id="row_@Model.Id">
     <td>
         <div class="product-cell-detail">
