--- a/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Shared/AddToCart.cshtml
+++ b/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Shared/AddToCart.cshtml
@@ -1,4 +1,4 @@
-﻿@model AddToCartViewModel
+﻿@model SpyStore.Mvc.Models.ViewModels.AddToCartViewModel
 @{
     ViewData["Title"] = @ViewBag.Title;
 }
