--- a/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Shared/EditorTemplates/AddToCartViewModel.cshtml
+++ b/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Shared/EditorTemplates/AddToCartViewModel.cshtml
@@ -1,4 +1,4 @@
-﻿@model AddToCartViewModel
+﻿@model SpyStore.Mvc.Models.ViewModels.AddToCartViewModel
 @if (Model.Quantity == 0)
 {
     Model.Quantity = 1;
