--- a/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Shared/Components/Menu/MenuView.cshtml
+++ b/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Shared/Components/Menu/MenuView.cshtml
@@ -2,6 +2,7 @@
 <li><a asp-controller="Products" asp-action="Featured" class="nav-link">Featured</a></li>
 @foreach (var item in Model)
 {
+    //Demo: Outgoing links (View)
     <li><a asp-controller="Products" asp-action="ProductList" asp-route-id="@item.Id" class="nav-link">@item.CategoryName</a></li>
 }
 
