--- a/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/_ViewImports.cshtml
+++ b/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/_ViewImports.cshtml
@@ -1,8 +1,5 @@
-﻿@using SpyStore.Hol.Mvc
-@using SpyStore.Hol.Mvc.Models
-@using System.Collections.Generic
+﻿@using System.Collections.Generic
 @using Microsoft.AspNetCore.Mvc.Rendering
-@using SpyStore.Hol.Mvc.Models.ViewModels
 @addTagHelper *, WebOptimizer.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, SpyStore.Hol.Mvc
+@addTagHelper *, SpyStore.Mvc
