updates from NO talks

--- a/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Orders/Details.cshtml
+++ b/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Orders/Details.cshtml
@@ -1,4 +1,6 @@
-﻿@model SpyStore.Models.ViewModels.OrderWithDetailsAndProductInfo
+﻿@inject IHostingEnvironment env
+@using Microsoft.AspNetCore.Hosting
+@model SpyStore.Models.ViewModels.OrderWithDetailsAndProductInfo
 @{
     ViewData["Title"] = "Details";
 }
