--- a/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/_ViewImports.cshtml
+++ b/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
-﻿@using System.Collections.Generic
+﻿@using SpyStore.Mvc.Models
+@using SpyStore.Models.Entities
+@using SpyStore.Models.ViewModels
+@using System.Collections.Generic
 @using Microsoft.AspNetCore.Mvc.Rendering
 @addTagHelper *, WebOptimizer.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
