--- a/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Shared/AddToCart.cshtml
+++ b/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Shared/AddToCart.cshtml
@@ -7,8 +7,10 @@
       asp-controller="Cart"
       asp-action="AddToCart"
       asp-route-customerId="@ViewBag.CustomerId"
-      asp-route-productId="@Model.Id">
+      asp-antiforgery="true"
+      id="myForm">
     @Html.EditorForModel()
+    <div asp-validation-summary="All" class="text-danger"></div>
 </form>
 @{
     if (ViewBag.CameFromProducts != null && ViewBag.CameFromProducts)
@@ -20,6 +22,6 @@
 }
 @section Scripts {
     @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        <partial name="_ValidationScriptsPartial" />
     }
 }
