--- a/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Shared/Components/Menu/MenuView.cshtml
+++ b/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Shared/Components/Menu/MenuView.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<SpyStore.Models.Entities.Category>
-<li><a asp-controller="Products" asp-action="Featured" class="nav-link">Featured</a></li>
+<li class="nav-item"><a asp-controller="Products" asp-action="Featured" class="nav-link">Featured</a></li>
 @foreach (var item in Model)
 {
     //Demo: Outgoing links (View)
 @*@Html.ActionLink("Product Foo","ProductList","Products",new {id=item.Id})*@
-    <li><a asp-controller="Products" asp-action="ProductList" asp-route-id="@item.Id" class="nav-link">@item.CategoryName</a></li>
+    <li class="nav-item"><a asp-controller="Products" asp-action="ProductList" asp-route-id="@item.Id" class="nav-link">@item.CategoryName</a></li>
 }
 
