--- a/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Shared/_Layout.cshtml
+++ b/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Shared/_Layout.cshtml
@@ -3,56 +3,61 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - SpyStore</title>
-
-    <environment include="Development">
+    <title>@ViewData["Title"] - SpyStore.Mvc</title>
+    <environment include="Development,Local">
         <link rel="stylesheet" href="~/lib/bootstrap4/css/bootstrap.css"/>
-        <link href="~/lib/fontawesome/css/font-awesome.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="~/lib/fontawesome/css/font-awesome.css"/>
     </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-              integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"
-              asp-fallback-href="~/lib/bootstrap4/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link href="~/lib/fontawesome/css/font-awesome.min.css" rel="stylesheet" />
+    <environment exclude="Development,Local">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
+              crossorigin="anonymous"
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"/>
+        <link rel="stylesheet" href="~/lib/fontawesome/css/font-awesome.min.css" />
     </environment>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Products" asp-action="Index">SpyStore</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RazorSyntax">Razor</a>
-                        </li>
-                        <vc:menu/>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="LoginView"/>
-                </div>
-                </div>
-        </nav>
-    </header>
+<header class="navbar navbar-expand-sm navbar-light bg-primary navbar-static-top">
     <div class="container">
-        @*<partial name="_CookieConsentPartial" />*@
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+        <div class="navbar-header">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand d-inline-block d-sm-none" asp-area="" asp-controller="Products" asp-action="Index">SPY STORE</a>
+        </div>
+        <nav class="collapse navbar-collapse header-collapse" id="navbarSupportedContent">
+            <ul class="nav navbar-nav ml-auto">
+                <li class="nav-item dropdown categories-dropdown d-block d-lg-none">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">CATEGORIES <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <vc:menu></vc:menu>
+                        <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
+                    </ul>
+                </li>
+                <partial name="LoginView"/>
+            </ul>
+        </nav>
     </div>
+</header>
+
+<div class="page container">
+    <div class="card">
+        <nav class="card-header d-none d-sm-block">
+            <div class="store-logo">
+                <a asp-controller="Products" asp-action="Featured"><img src="~/images/store-logo.png" alt="Spy Store" asp-append-version="true"></a>
+            </div>
+            <ul class="nav nav-pills d-none d-lg-flex">
+                <vc:menu></vc:menu>
+                <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
+            </ul>
+        </nav>
+        <div class="card-body">
+            @RenderBody()
+        </div>
+    </div>
+</div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
@@ -60,22 +65,22 @@
         </div>
     </footer>
 
-    <environment include="Development">
+    <environment include="Development,Local">
         <script src="~/lib/jquery/jquery.js" asp-append-version="true"></script>
-        <script src="~/lib/bootstrap4/js/bootstrap.js"></script>
+        <script src="~/lib/bootstrap4/js/bootstrap.bundle.js"></script>
     </environment>
-    <environment exclude="Development">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
-                asp-fallback-src="~/lib/jquery/jquery.min.js"
+    <environment exclude="Development,Local">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
                 asp-fallback-test="window.jQuery"
                 crossorigin="anonymous"
-                integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
+                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
         </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap4/js/bootstrap.min.js"
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
+                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
                 crossorigin="anonymous"
-                integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy">
+                integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o">
         </script>
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
