two more core 3 changes

--- a/DOTNETCORE/ASP.NETCore/SpyStore3/SpyStore.Mvc/Views/Orders/Details.cshtml
+++ b/DOTNETCORE/ASP.NETCore/SpyStore3/SpyStore.Mvc/Views/Orders/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@inject IHostingEnvironment env
+﻿@inject IWebHostEnvironment env
 @using Microsoft.AspNetCore.Hosting
 @model SpyStore.Models.ViewModels.OrderWithDetailsAndProductInfo
 @{
