--- a/DOTNETCORE/ASP.NETCore/SpyStore3/SpyStore.Mvc/Views/_ViewImports.cshtml
+++ b/DOTNETCORE/ASP.NETCore/SpyStore3/SpyStore.Mvc/Views/_ViewImports.cshtml
@@ -3,6 +3,6 @@
 @using SpyStore.Models.ViewModels
 @using System.Collections.Generic
 @using Microsoft.AspNetCore.Mvc.Rendering
-@*@addTagHelper *, WebOptimizer.Core*@
+@addTagHelper *, WebOptimizer.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, SpyStore.Mvc
