--- a/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Shared/_Layout.cshtml
+++ b/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Hosting
+@using Microsoft.Extensions.Options
+@using SpyStore.Mvc.Support
 @inject IHostingEnvironment env
 <!DOCTYPE html>
 <html>
