--- a/DOTNETCORE/ASP.NETCore/ASP.NETCoreAndEfCore/SpyStore.Hol.Mvc/Views/Shared/EditorTemplates/AddToCartViewModel.cshtml
+++ b/DOTNETCORE/ASP.NETCore/ASP.NETCoreAndEfCore/SpyStore.Hol.Mvc/Views/Shared/EditorTemplates/AddToCartViewModel.cshtml
@@ -41,7 +41,7 @@
                 <input type="hidden" asp-for="UnitsInStock" />
                 <input type="hidden" asp-for="CurrentPrice" />
                 <div class="row cart-group">
-                    <label for="qty">QUANTITY:</label>
+                    <label asp-for="Quantity">QUANTITY:</label>
                     <input asp-for="Quantity" class="cart-quantity form-control" />
                     <span asp-validation-for="Quantity" class="text-danger"></span>
                     <button class="btn btn-primary" type="submit">Add to Cart</button>
