--- a/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/Shared/_Layout.cshtml
+++ b/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/Shared/_Layout.cshtml
@@ -31,12 +31,12 @@
             <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home <i class="fa fa-home"></i></a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Index">Inventory <i class="fa fa-car"></i></a>
                     </li>
+                    <vc:menu/>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy <i class="fa fa-user-secret"></i></a>
                     </li>
-                    <vc:menu/>
                 </ul>
             </div>
         </div>
