validation/model binding examples

--- a/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/Shared/_Layout.cshtml
+++ b/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                     </li>
                     <vc:menu/>
                     <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RazorSyntax">Razor Syntax</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy <i class="fa fa-user-secret"></i></a>
                     </li>
                 </ul>
