working on the final edits

--- a/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/Cars/Index.cshtml
+++ b/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/Cars/Index.cshtml
@@ -6,4 +6,4 @@
 
 <h1>Vehicle Inventory</h1>
 
-<partial name="Partials/_CarListPartial" model="Model"/>
+<partial name="Partials/_CarListPartial" model="@Model"/>
