--- a/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/_ViewImports.cshtml
+++ b/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using AutoLot.Web
 @using AutoLot.Web.Models
 @using AutoLot.Dal.Models.Entities
+@using AutoLot.Web.ConfigSettings
 @addTagHelper *, WebOptimizer.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AutoLot.Web
