--- a/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/Cars/Details.cshtml
+++ b/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/Cars/Details.cshtml
@@ -6,6 +6,7 @@
 
 <h1>Details for @Model.PetName</h1>
 @Html.DisplayForModel()
+@*@Html.DisplayForModel("CarWithColors")*@
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id" class="text-warning">Edit <i class="fas fa-edit"></i></a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a asp-action="Delete" asp-route-id="@Model.Id" class="text-danger">Delete <i class="fas fa-trash"></i></a>&nbsp;&nbsp;|&nbsp;&nbsp;
