--- a/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/Home/Index.cshtml
+++ b/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@model DealerInfo
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to @Model.DealerName</h1>
+    <p class="lead">Located in @Model.City, @Model.State</p>
 </div>
