--- a/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/Shared/_Layout.cshtml
+++ b/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Http.Features
+@using Microsoft.AspNetCore.Hosting
+@using Microsoft.Extensions.Hosting
+
+@inject IWebHostEnvironment Env
 <!DOCTYPE html>
 @{
     var consentFeature = Context.Features.Get<ITrackingConsentFeature>();
@@ -7,60 +11,17 @@
 }
 <html lang="en">
 <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - AutoLot.Web</title>
-    <environment include="Development,Local">
-        <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" asp-append-version="true"/>
-    </environment>
-    <environment exclude="Development,Local">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
-              crossorigin="anonymous"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"/>
-    </environment>
-    <link rel="stylesheet" href="~/lib/fontawesome/css/all.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/css/site.css"/>
+    <partial name="Partials/_Head"/>
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <div class="container">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AutoLot.Web</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown">Inventory <i class="fa fa-car"></i></a>
-                        <vc:menu/>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RazorSyntax">Razor Syntax <i class="fas fa-cut"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy <i class="fa fa-user-secret"></i></a>
-                    </li>
-                    @if (showBanner)
-                    {
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="GrantConsent" title="Accept Cookie Policy">Accept Cookie Policy <i class="fas fa-cookie-bite"></i></a>
-                        </li>
-                    }
-                    else
-                    {
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="WithdrawConsent" title="Revoke Cookie Policy">Revoke Cookie Policy <i class="fas fa-cookie"></i></a>
-                        </li>
-                    }
-
-                </ul>
-            </div>
-        </div>
-    </nav>
+    @{
+        if (Env.IsDevelopment() || Env.IsEnvironment("Local"))
+        {
+            <p class="lead">Development</p>
+        }
+    }
+    <partial name="Partials/_Menu"/>
 </header>
 <div class="container">
     <partial name="_CookieConsentPartial"/>
@@ -74,26 +35,7 @@
         &copy; 2020 - AutoLot.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
 </footer>
-<environment include="Development,Local">
-    <script src="~/lib/jquery/jquery.js" asp-append-version="true"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.bundle.js"></script>
-</environment>
-<environment exclude="Development,Local">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
-            asp-fallback-src="~/lib/jquery/dist/jquery.js"
-            asp-fallback-test="window.jQuery"
-            crossorigin="anonymous"
-            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
-            asp-fallback-src="~/lib/bootstrap/js/bootstrap.bundle.js"
-            asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-            crossorigin="anonymous"
-            integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o">
-    </script>
-</environment>
-
-<script src="~/js/site.js" asp-append-version="true"></script>
+<partial name="Partials/_JavaScriptFiles"/>
 @RenderSection("Scripts", required: false)
 </body>
 </html>
