--- a/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/Shared/_Layout.cshtml
+++ b/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Views/Shared/_Layout.cshtml
@@ -1,14 +1,8 @@
-﻿@using Microsoft.AspNetCore.Http.Features
-@using Microsoft.AspNetCore.Hosting
+﻿@using Microsoft.AspNetCore.Hosting
 @using Microsoft.Extensions.Hosting
-
 @inject IWebHostEnvironment Env
-<!DOCTYPE html>
-@{
-    var consentFeature = Context.Features.Get<ITrackingConsentFeature>();
-    var showBanner = !consentFeature?.CanTrack ?? false;
 
-}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <partial name="Partials/_Head"/>
