--- a/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Shared/Partials/_Menu.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Shared/Partials/_Menu.cshtml
@@ -10,7 +10,7 @@
 }
 <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-3">
     <div class="container">
-        <a class="navbar-brand" asp-area="" asp-page="Index">@dealerInfo.DealerName</a>
+        <a class="navbar-brand" asp-page="/Index">@dealerInfo.DealerName</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,10 +22,10 @@
                     <vc:menu />
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-page="RazorSyntax">Razor Syntax <i class="fas fa-cut"></i></a>
+                    <a class="nav-link text-dark" asp-area="" asp-page="/RazorSyntax">Razor Syntax <i class="fas fa-cut"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-page="Privacy">Privacy <i class="fa fa-user-secret"></i></a>
+                    <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy <i class="fa fa-user-secret"></i></a>
                 </li>
                 @if (showBanner)
                 {
