--- a/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Cars/Index.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v3.1/AutoLot/AutoLot.Web/Pages/Cars/Index.cshtml
@@ -1,54 +1,20 @@
-﻿@page
+﻿@page "{makeId?}/{makeName?}"
 @model AutoLot.Web.Pages.Cars.IndexModel
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Car[0].MakeNavigation)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Car[0].Color)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Car[0].PetName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Car[0].TimeStamp)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Car) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.MakeNavigation.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Color)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PetName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TimeStamp)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+@{ 
+    if (Model.MakeId.HasValue)
+    {
+        <h1>Vehicle Inventory for @Model.MakeName</h1>
+        var mode = new ViewDataDictionary(ViewData) { { "ByMake", true } };
+        <partial name="Partials/_CarListPartial" model="@Model.Cars" view-data="@mode" />
+    }
+    else
+    {
+        <h1>Vehicle Inventory</h1>
+        <partial name="Partials/_CarListPartial" model="@Model.Cars" />
+    }
 }
-    </tbody>
-</table>
