--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Pages/Shared/Partials/_Menu.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Pages/Shared/Partials/_Menu.cshtml
@@ -40,7 +40,7 @@
                     </li>
                 }
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="Admin" asp-page="./Makes/Index" title="Makes Admin">Makes Admin<i class="fas fa-cog"></i></a>
+                    <a class="nav-link text-dark" asp-area="Admin" asp-page="/Makes/Index" title="Makes Admin">Makes Admin<i class="fas fa-cog"></i></a>
                 </li>
 
             </ul>
