--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Areas/Admin/Pages/Makes/Delete.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Areas/Admin/Pages/Makes/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{id?}"
 @model DeleteModel
 
 @{
@@ -9,23 +9,8 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Make</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Make.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Make.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Make.TimeStamp)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Make.TimeStamp)
-        </dd>
-    </dl>
-    
+    @Html.DisplayFor(x => x.Make)
+
     <form method="post">
         <input type="hidden" asp-for="Make.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
