--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Areas/Admin/Pages/Makes/Edit.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Areas/Admin/Pages/Makes/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{id?}"
 @model EditModel
 
 @{
@@ -13,12 +13,9 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Make.Name" class="col-form-label"></label>
-                <input asp-for="Make.Name" class="form-control" />
-                <span asp-validation-for="Make.Name" class="text-danger"></span>
-            </div>
+            @Html.EditorFor(x => x.Make)
             <input type="hidden" asp-for="Make.Id" />
+            <input type="hidden" asp-for="Make.TimeStamp" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
